Postgres 9.4 fails if unmigrated Postgres 9.0 data is present
[#154738591](https://www.pivotaltracker.com/story/show/154738591)

Signed-off-by: Chris Dutra <cdutra@pivotal.io>

--- a/ci/tasks/test-brats.yml
+++ b/ci/tasks/test-brats.yml
@@ -9,7 +9,7 @@ image_resource:
 inputs:
   - name: bosh-src
   - name: bosh-dns-release
-  - name: stemcell
+  - name: candidate-warden-ubuntu-stemcell
   - name: bosh-release
 
 run:
