Enforce authorization to diff configs
[#154738974](https://www.pivotaltracker.com/story/show/154738974)

Signed-off-by: Joshua Aresty <joshua.aresty@emc.com>

--- a/src/.rubocop.yml
+++ b/src/.rubocop.yml
@@ -18,10 +18,7 @@ Metrics/LineLength:
   Max: 130
 
 Metrics/ModuleLength:
-  Exclude: ['**/*_spec.rb']
-
-Metrics/ModuleLength:
-  Max: 250
+  Enabled: false
 
 Metrics/ClassLength:
   Max: 200
