Remove load tests from branch pipeline
* We should fix the load test builds on master before we make a
decision about the release branch load tests

[#155301488](https://www.pivotaltracker.com/story/show/155301488)

Signed-off-by: Tom Viehman <tviehman@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -9,10 +9,10 @@ groups:
       - blobstore-client-integration
       - integration-postgres-gocli-sha2
       - integration-mysql-gocli-sha1
-      - load-tests-postgres
-      - load-tests-mysql
-      - legacy-load-tests-postgres
-      - legacy-load-tests-mysql
+      # - load-tests-postgres
+      # - load-tests-mysql
+      # - legacy-load-tests-postgres
+      # - legacy-load-tests-mysql
       - fuzz-tests
       - candidate-release
       - finalize-bosh-release
@@ -439,102 +439,102 @@ jobs:
             DB: mysql
             RUBY_VERSION: 2.4.2
 
-  - name: load-tests-postgres
-    public: true
-    serial: true
-    build_logs_to_retain: 250
-    plan:
-    - { get: load-tests-interval, trigger: true }
-    - { get: bosh-load-tests-workspace }
-    - { get: warden-ubuntu-trusty }
-    - { get: bosh-candidate-release-tarballs }
-    - { get: bosh-cli }
-
-    - task: test
-      privileged: true
-      file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-load-tests"]
-      input_mapping:
-        bosh-candidate-stemcell: warden-ubuntu-trusty
-        bosh-candidate-release: bosh-candidate-release-tarballs
-      params:
-        DB: postgresql
-        LEGACY: false
-      on_failure:
-        <<: *slack-alert
-
-  - name: legacy-load-tests-postgres
-    public: true
-    serial: true
-    build_logs_to_retain: 250
-    plan:
-    - { get: load-tests-interval, trigger: true }
-    - { get: bosh-load-tests-workspace }
-    - { get: bosh-cli }
-    - { get: bosh-candidate-release-tarballs }
-    - { get: warden-ubuntu-trusty }
-
-    - task: test
-      privileged: true
-      file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-load-tests-2"]
-      input_mapping:
-        bosh-candidate-stemcell: warden-ubuntu-trusty
-        bosh-candidate-release: bosh-candidate-release-tarballs
-      params:
-        DB: postgresql
-        LEGACY: true
-      on_failure:
-        <<: *slack-alert
-
-  - name: load-tests-mysql
-    public: true
-    serial: true
-    build_logs_to_retain: 250
-    plan:
-    - { get: load-tests-interval, trigger: true }
-    - { get: bosh-load-tests-workspace }
-    - { get: bosh-cli }
-    - { get: bosh-candidate-release-tarballs }
-    - { get: warden-ubuntu-trusty }
-
-    - task: test
-      privileged: true
-      file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-load-tests-3"]
-      input_mapping:
-        bosh-candidate-stemcell: warden-ubuntu-trusty
-        bosh-candidate-release: bosh-candidate-release-tarballs
-      params:
-        DB: mysql
-        LEGACY: false
-      on_failure:
-        <<: *slack-alert
-
-  - name: legacy-load-tests-mysql
-    public: true
-    serial: true
-    build_logs_to_retain: 250
-    plan:
-    - { get: load-tests-interval, trigger: true }
-    - { get: bosh-load-tests-workspace }
-    - { get: bosh-cli }
-    - { get: bosh-candidate-release-tarballs }
-    - { get: warden-ubuntu-trusty }
-
-    - task: test
-      privileged: true
-      file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-load-tests-4"]
-      input_mapping:
-        bosh-candidate-stemcell: warden-ubuntu-trusty
-        bosh-candidate-release: bosh-candidate-release-tarballs
-      params:
-        DB: mysql
-        LEGACY: true
-      on_failure:
-        <<: *slack-alert
-
+  # - name: load-tests-postgres
+  #   public: true
+  #   serial: true
+  #   build_logs_to_retain: 250
+  #   plan:
+  #   - { get: load-tests-interval, trigger: true }
+  #   - { get: bosh-load-tests-workspace }
+  #   - { get: warden-ubuntu-trusty }
+  #   - { get: bosh-candidate-release-tarballs }
+  #   - { get: bosh-cli }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-load-tests-workspace/ci/tasks/test.yml
+  #     tags: ["bosh-load-tests"]
+  #     input_mapping:
+  #       bosh-candidate-stemcell: warden-ubuntu-trusty
+  #       bosh-candidate-release: bosh-candidate-release-tarballs
+  #     params:
+  #       DB: postgresql
+  #       LEGACY: false
+  #     on_failure:
+  #       <<: *slack-alert
+  #
+  # - name: legacy-load-tests-postgres
+  #   public: true
+  #   serial: true
+  #   build_logs_to_retain: 250
+  #   plan:
+  #   - { get: load-tests-interval, trigger: true }
+  #   - { get: bosh-load-tests-workspace }
+  #   - { get: bosh-cli }
+  #   - { get: bosh-candidate-release-tarballs }
+  #   - { get: warden-ubuntu-trusty }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-load-tests-workspace/ci/tasks/test.yml
+  #     tags: ["bosh-load-tests-2"]
+  #     input_mapping:
+  #       bosh-candidate-stemcell: warden-ubuntu-trusty
+  #       bosh-candidate-release: bosh-candidate-release-tarballs
+  #     params:
+  #       DB: postgresql
+  #       LEGACY: true
+  #     on_failure:
+  #       <<: *slack-alert
+  #
+  # - name: load-tests-mysql
+  #   public: true
+  #   serial: true
+  #   build_logs_to_retain: 250
+  #   plan:
+  #   - { get: load-tests-interval, trigger: true }
+  #   - { get: bosh-load-tests-workspace }
+  #   - { get: bosh-cli }
+  #   - { get: bosh-candidate-release-tarballs }
+  #   - { get: warden-ubuntu-trusty }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-load-tests-workspace/ci/tasks/test.yml
+  #     tags: ["bosh-load-tests-3"]
+  #     input_mapping:
+  #       bosh-candidate-stemcell: warden-ubuntu-trusty
+  #       bosh-candidate-release: bosh-candidate-release-tarballs
+  #     params:
+  #       DB: mysql
+  #       LEGACY: false
+  #     on_failure:
+  #       <<: *slack-alert
+  #
+  # - name: legacy-load-tests-mysql
+  #   public: true
+  #   serial: true
+  #   build_logs_to_retain: 250
+  #   plan:
+  #   - { get: load-tests-interval, trigger: true }
+  #   - { get: bosh-load-tests-workspace }
+  #   - { get: bosh-cli }
+  #   - { get: bosh-candidate-release-tarballs }
+  #   - { get: warden-ubuntu-trusty }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-load-tests-workspace/ci/tasks/test.yml
+  #     tags: ["bosh-load-tests-4"]
+  #     input_mapping:
+  #       bosh-candidate-stemcell: warden-ubuntu-trusty
+  #       bosh-candidate-release: bosh-candidate-release-tarballs
+  #     params:
+  #       DB: mysql
+  #       LEGACY: true
+  #     on_failure:
+  #       <<: *slack-alert
+  #
   - name: fuzz-tests
     public: true
     serial: true
@@ -755,11 +755,11 @@ resources:
       uri: https://github.com/cloudfoundry-incubator/bosh-fuzz-tests.git
       branch: master
 
-  - name: bosh-load-tests-workspace
-    type: git
-    source:
-      uri: https://github.com/cloudfoundry-incubator/bosh-load-tests-workspace
-      branch: master
+  # - name: bosh-load-tests-workspace
+  #   type: git
+  #   source:
+  #     uri: https://github.com/cloudfoundry-incubator/bosh-load-tests-workspace
+  #     branch: master
 
   - name: bosh-master
     type: git
@@ -773,10 +773,10 @@ resources:
     source:
       interval: 15m
 
-  - name: load-tests-interval
-    type: time
-    source:
-      interval: 5h
+  # - name: load-tests-interval
+  #   type: time
+  #   source:
+  #     interval: 5h
 
   - name: every-sunday
     type: time
@@ -837,10 +837,10 @@ resources:
       bucket: bosh-core-stemcells-candidate
       regexp: warden/bosh-stemcell-(.+)-warden-boshlite-ubuntu-trusty-go_agent.tgz
 
-  - name: warden-ubuntu-trusty
-    type: bosh-io-stemcell
-    source:
-      name: bosh-warden-boshlite-ubuntu-trusty-go_agent
+  # - name: warden-ubuntu-trusty
+  #   type: bosh-io-stemcell
+  #   source:
+  #     name: bosh-warden-boshlite-ubuntu-trusty-go_agent
 
   - name: vsphere-esxi-centos-7
     type: bosh-io-stemcell
