--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -10,10 +10,10 @@ groups:
       - integration-postgres-gocli-sha2
       - integration-mysql-gocli-sha1
       - integration-2.3-postgres
-      - load-tests-postgres
-      - load-tests-mysql
-      - legacy-load-tests-postgres
-      - legacy-load-tests-mysql
+      # - load-tests-postgres
+      # - load-tests-mysql
+      # - legacy-load-tests-postgres
+      # - legacy-load-tests-mysql
       - fuzz-tests
       - candidate-release
       - bats-centos
@@ -480,103 +480,103 @@ jobs:
             DB: mysql
             RUBY_VERSION: 2.3.6
 
-  - name: load-tests-postgres
-    public: true
-    serial: true
-    serial_groups: ["load_tests"] # heavy footprint! run one at a time.
-    build_logs_to_retain: 250
-    plan:
-    - { get: bosh-load-tests-workspace }
-    - { get: warden-ubuntu-trusty }
-    - { get: bosh-candidate-release-tarballs }
-    - { get: bosh-cli }
-
-    - task: test
-      privileged: true
-      file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-load-tests"]
-      input_mapping:
-        bosh-candidate-stemcell: warden-ubuntu-trusty
-        bosh-candidate-release: bosh-candidate-release-tarballs
-      params:
-        DB: postgresql
-        LEGACY: false
-      on_failure:
-        <<: *slack-alert
-
-  - name: legacy-load-tests-postgres
-    public: true
-    serial: true
-    serial_groups: ["load_tests"] # heavy footprint! run one at a time.
-    build_logs_to_retain: 250
-    plan:
-    - { get: bosh-load-tests-workspace }
-    - { get: bosh-cli }
-    - { get: bosh-candidate-release-tarballs }
-    - { get: warden-ubuntu-trusty }
-
-    - task: test
-      privileged: true
-      file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-load-tests"]
-      input_mapping:
-        bosh-candidate-stemcell: warden-ubuntu-trusty
-        bosh-candidate-release: bosh-candidate-release-tarballs
-      params:
-        DB: postgresql
-        LEGACY: true
-      on_failure:
-        <<: *slack-alert
-
-  - name: load-tests-mysql
-    public: true
-    serial: true
-    serial_groups: ["load_tests"] # heavy footprint! run one at a time.
-    build_logs_to_retain: 250
-    plan:
-    - { get: bosh-load-tests-workspace }
-    - { get: bosh-cli }
-    - { get: bosh-candidate-release-tarballs }
-    - { get: warden-ubuntu-trusty }
-
-    - task: test
-      privileged: true
-      file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-load-tests"]
-      input_mapping:
-        bosh-candidate-stemcell: warden-ubuntu-trusty
-        bosh-candidate-release: bosh-candidate-release-tarballs
-      params:
-        DB: mysql
-        LEGACY: false
-      on_failure:
-        <<: *slack-alert
-
-  - name: legacy-load-tests-mysql
-    public: true
-    serial: true
-    serial_groups: ["load_tests"] # heavy footprint! run one at a time.
-    build_logs_to_retain: 250
-    plan:
-    - { get: fuzz-interval-trigger, trigger: true }
-    - { get: bosh-load-tests-workspace }
-    - { get: bosh-cli }
-    - { get: bosh-candidate-release-tarballs }
-    - { get: warden-ubuntu-trusty }
-
-    - task: test
-      privileged: true
-      file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-load-tests"]
-      input_mapping:
-        bosh-candidate-stemcell: warden-ubuntu-trusty
-        bosh-candidate-release: bosh-candidate-release-tarballs
-      params:
-        DB: mysql
-        LEGACY: true
-      on_failure:
-        <<: *slack-alert
-
+  # - name: load-tests-postgres
+  #   public: true
+  #   serial: true
+  #   serial_groups: ["load_tests"] # heavy footprint! run one at a time.
+  #   build_logs_to_retain: 250
+  #   plan:
+  #   - { get: bosh-load-tests-workspace }
+  #   - { get: warden-ubuntu-trusty }
+  #   - { get: bosh-candidate-release-tarballs }
+  #   - { get: bosh-cli }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-load-tests-workspace/ci/tasks/test.yml
+  #     tags: ["bosh-load-tests"]
+  #     input_mapping:
+  #       bosh-candidate-stemcell: warden-ubuntu-trusty
+  #       bosh-candidate-release: bosh-candidate-release-tarballs
+  #     params:
+  #       DB: postgresql
+  #       LEGACY: false
+  #     on_failure:
+  #       <<: *slack-alert
+  #
+  # - name: legacy-load-tests-postgres
+  #   public: true
+  #   serial: true
+  #   serial_groups: ["load_tests"] # heavy footprint! run one at a time.
+  #   build_logs_to_retain: 250
+  #   plan:
+  #   - { get: bosh-load-tests-workspace }
+  #   - { get: bosh-cli }
+  #   - { get: bosh-candidate-release-tarballs }
+  #   - { get: warden-ubuntu-trusty }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-load-tests-workspace/ci/tasks/test.yml
+  #     tags: ["bosh-load-tests"]
+  #     input_mapping:
+  #       bosh-candidate-stemcell: warden-ubuntu-trusty
+  #       bosh-candidate-release: bosh-candidate-release-tarballs
+  #     params:
+  #       DB: postgresql
+  #       LEGACY: true
+  #     on_failure:
+  #       <<: *slack-alert
+  #
+  # - name: load-tests-mysql
+  #   public: true
+  #   serial: true
+  #   serial_groups: ["load_tests"] # heavy footprint! run one at a time.
+  #   build_logs_to_retain: 250
+  #   plan:
+  #   - { get: bosh-load-tests-workspace }
+  #   - { get: bosh-cli }
+  #   - { get: bosh-candidate-release-tarballs }
+  #   - { get: warden-ubuntu-trusty }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-load-tests-workspace/ci/tasks/test.yml
+  #     tags: ["bosh-load-tests"]
+  #     input_mapping:
+  #       bosh-candidate-stemcell: warden-ubuntu-trusty
+  #       bosh-candidate-release: bosh-candidate-release-tarballs
+  #     params:
+  #       DB: mysql
+  #       LEGACY: false
+  #     on_failure:
+  #       <<: *slack-alert
+  #
+  # - name: legacy-load-tests-mysql
+  #   public: true
+  #   serial: true
+  #   serial_groups: ["load_tests"] # heavy footprint! run one at a time.
+  #   build_logs_to_retain: 250
+  #   plan:
+  #   - { get: fuzz-interval-trigger, trigger: true }
+  #   - { get: bosh-load-tests-workspace }
+  #   - { get: bosh-cli }
+  #   - { get: bosh-candidate-release-tarballs }
+  #   - { get: warden-ubuntu-trusty }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-load-tests-workspace/ci/tasks/test.yml
+  #     tags: ["bosh-load-tests"]
+  #     input_mapping:
+  #       bosh-candidate-stemcell: warden-ubuntu-trusty
+  #       bosh-candidate-release: bosh-candidate-release-tarballs
+  #     params:
+  #       DB: mysql
+  #       LEGACY: true
+  #     on_failure:
+  #       <<: *slack-alert
+  #
   - name: fuzz-tests
     public: true
     serial: true
@@ -761,12 +761,12 @@ resources:
       uri: https://github.com/cloudfoundry-incubator/bosh-fuzz-tests.git
       branch: master
 
-  - name: bosh-load-tests-workspace
-    type: git
-    source:
-      uri: https://github.com/cloudfoundry-incubator/bosh-load-tests-workspace
-      branch: master
-
+  # - name: bosh-load-tests-workspace
+  #   type: git
+  #   source:
+  #     uri: https://github.com/cloudfoundry-incubator/bosh-load-tests-workspace
+  #     branch: master
+  #
   - name: fuzz-interval-trigger
     type: time
     source:
@@ -832,11 +832,11 @@ resources:
       bucket: bosh-core-stemcells-candidate
       regexp: warden/bosh-stemcell-(.+)-warden-boshlite-ubuntu-trusty-go_agent.tgz
 
-  - name: warden-ubuntu-trusty
-    type: bosh-io-stemcell
-    source:
-      name: bosh-warden-boshlite-ubuntu-trusty-go_agent
-
+  # - name: warden-ubuntu-trusty
+  #   type: bosh-io-stemcell
+  #   source:
+  #     name: bosh-warden-boshlite-ubuntu-trusty-go_agent
+  #
   - name: vsphere-esxi-centos-7
     type: bosh-io-stemcell
     source:
