--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -10,10 +10,10 @@ groups:
       - integration-postgres-gocli-sha2
       - integration-mysql-gocli-sha1
       - integration-2.3-postgres
-      - load-tests-postgres
-      - load-tests-mysql
-      - legacy-load-tests-postgres
-      - legacy-load-tests-mysql
+      # - load-tests-postgres
+      # - load-tests-mysql
+      # - legacy-load-tests-postgres
+      # - legacy-load-tests-mysql
       - fuzz-tests
       - candidate-release
       - bats-centos
@@ -451,99 +451,99 @@ jobs:
             DB: mysql
             RUBY_VERSION: 2.3.6
 
-  - name: load-tests-postgres
-    public: true
-    serial: true
-    build_logs_to_retain: 250
-    plan:
-    - { get: bosh-src, trigger: true }
-    - { get: bosh-agent }
-    - get: bosh-load-tests-workspace
-      version: &loadtestversion { ref: 3fd167220b8c6adcccc8d47c1a8b364a5e4674d7 }
-    - { get: bosh-cli }
-
-    - task: test
-      privileged: true
-      file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-integration"]
-      params:
-        BOSH_SRC_PATH: bosh-src/src
-        DB: postgresql
-        RUBY_VERSION: 2.3.6
-        LEGACY: false
-      on_failure:
-        <<: *slack-alert
-
-  - name: legacy-load-tests-postgres
-    public: true
-    serial: true
-    build_logs_to_retain: 250
-    plan:
-    - { get: bosh-src, trigger: true }
-    - { get: bosh-agent }
-    - get: bosh-load-tests-workspace
-      version: *loadtestversion
-    - { get: bosh-cli }
-
-    - task: test
-      privileged: true
-      file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-integration"]
-      params:
-        BOSH_SRC_PATH: bosh-src/src
-        DB: postgresql
-        RUBY_VERSION: 2.3.6
-        LEGACY: true
-      on_failure:
-        <<: *slack-alert
-
-  - name: load-tests-mysql
-    public: true
-    serial: true
-    build_logs_to_retain: 250
-    plan:
-    - { get: bosh-src, trigger: true }
-    - { get: bosh-agent }
-    - get: bosh-load-tests-workspace
-      version: *loadtestversion
-    - { get: bosh-cli }
-
-    - task: test
-      privileged: true
-      file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-integration"]
-      params:
-        BOSH_SRC_PATH: bosh-src/src
-        DB: mysql
-        RUBY_VERSION: 2.3.6
-        LEGACY: false
-      on_failure:
-        <<: *slack-alert
-
-  - name: legacy-load-tests-mysql
-    public: true
-    serial: true
-    build_logs_to_retain: 250
-    plan:
-    - { get: fuzz-interval-trigger, trigger: true }
-    - { get: bosh-src, trigger: true }
-    - { get: bosh-agent }
-    - get: bosh-load-tests-workspace
-      version: *loadtestversion
-    - { get: bosh-cli }
-
-    - task: test
-      privileged: true
-      file: bosh-load-tests-workspace/ci/tasks/test.yml
-      tags: ["bosh-integration"]
-      params:
-        BOSH_SRC_PATH: bosh-src/src
-        DB: mysql
-        RUBY_VERSION: 2.3.6
-        LEGACY: true
-      on_failure:
-        <<: *slack-alert
-
+  # - name: load-tests-postgres
+  #   public: true
+  #   serial: true
+  #   build_logs_to_retain: 250
+  #   plan:
+  #   - { get: bosh-src, trigger: true }
+  #   - { get: bosh-agent }
+  #   - get: bosh-load-tests-workspace
+  #     version: &loadtestversion { ref: 3fd167220b8c6adcccc8d47c1a8b364a5e4674d7 }
+  #   - { get: bosh-cli }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-load-tests-workspace/ci/tasks/test.yml
+  #     tags: ["bosh-integration"]
+  #     params:
+  #       BOSH_SRC_PATH: bosh-src/src
+  #       DB: postgresql
+  #       RUBY_VERSION: 2.3.6
+  #       LEGACY: false
+  #     on_failure:
+  #       <<: *slack-alert
+  #
+  # - name: legacy-load-tests-postgres
+  #   public: true
+  #   serial: true
+  #   build_logs_to_retain: 250
+  #   plan:
+  #   - { get: bosh-src, trigger: true }
+  #   - { get: bosh-agent }
+  #   - get: bosh-load-tests-workspace
+  #     version: *loadtestversion
+  #   - { get: bosh-cli }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-load-tests-workspace/ci/tasks/test.yml
+  #     tags: ["bosh-integration"]
+  #     params:
+  #       BOSH_SRC_PATH: bosh-src/src
+  #       DB: postgresql
+  #       RUBY_VERSION: 2.3.6
+  #       LEGACY: true
+  #     on_failure:
+  #       <<: *slack-alert
+  #
+  # - name: load-tests-mysql
+  #   public: true
+  #   serial: true
+  #   build_logs_to_retain: 250
+  #   plan:
+  #   - { get: bosh-src, trigger: true }
+  #   - { get: bosh-agent }
+  #   - get: bosh-load-tests-workspace
+  #     version: *loadtestversion
+  #   - { get: bosh-cli }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-load-tests-workspace/ci/tasks/test.yml
+  #     tags: ["bosh-integration"]
+  #     params:
+  #       BOSH_SRC_PATH: bosh-src/src
+  #       DB: mysql
+  #       RUBY_VERSION: 2.3.6
+  #       LEGACY: false
+  #     on_failure:
+  #       <<: *slack-alert
+  #
+  # - name: legacy-load-tests-mysql
+  #   public: true
+  #   serial: true
+  #   build_logs_to_retain: 250
+  #   plan:
+  #   - { get: fuzz-interval-trigger, trigger: true }
+  #   - { get: bosh-src, trigger: true }
+  #   - { get: bosh-agent }
+  #   - get: bosh-load-tests-workspace
+  #     version: *loadtestversion
+  #   - { get: bosh-cli }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-load-tests-workspace/ci/tasks/test.yml
+  #     tags: ["bosh-integration"]
+  #     params:
+  #       BOSH_SRC_PATH: bosh-src/src
+  #       DB: mysql
+  #       RUBY_VERSION: 2.3.6
+  #       LEGACY: true
+  #     on_failure:
+  #       <<: *slack-alert
+  #
   - name: fuzz-tests
     public: true
     serial: true
@@ -729,12 +729,12 @@ resources:
       uri: https://github.com/cloudfoundry-incubator/bosh-fuzz-tests.git
       branch: 262.x
 
-  - name: bosh-load-tests-workspace
-    type: git
-    source:
-      uri: https://github.com/cloudfoundry-incubator/bosh-load-tests-workspace
-      branch: master
-
+  # - name: bosh-load-tests-workspace
+  #   type: git
+  #   source:
+  #     uri: https://github.com/cloudfoundry-incubator/bosh-load-tests-workspace
+  #     branch: master
+  #
   - name: fuzz-interval-trigger
     type: time
     source:
