--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -578,6 +578,7 @@ jobs:
     - { get: bosh-load-tests-workspace }
     - { get: warden-ubuntu-trusty }
     - { get: bosh-candidate-release-tarballs }
+    - { get: bosh-src }
     - { get: bosh-cli }
 
     - task: test
@@ -603,6 +604,7 @@ jobs:
     - { get: bosh-load-tests-workspace }
     - { get: bosh-cli }
     - { get: bosh-candidate-release-tarballs }
+    - { get: bosh-src }
     - { get: warden-ubuntu-trusty }
 
     - task: test
@@ -628,6 +630,7 @@ jobs:
     - { get: bosh-load-tests-workspace }
     - { get: bosh-cli }
     - { get: bosh-candidate-release-tarballs }
+    - { get: bosh-src }
     - { get: warden-ubuntu-trusty }
 
     - task: test
@@ -653,6 +656,7 @@ jobs:
     - { get: bosh-load-tests-workspace }
     - { get: bosh-cli }
     - { get: bosh-candidate-release-tarballs }
+    - { get: bosh-src }
     - { get: warden-ubuntu-trusty }
 
     - task: test
