--- a/releases/index.yml
+++ b/releases/index.yml
@@ -5,6 +5,8 @@ builds:
     version: "255.7"
   0360627f-9013-4438-92fa-d65431142bdf:
     version: "156"
+  04a78dab-fd51-4951-4aed-699207368868:
+    version: 263.7.0
   04ed089c-86ec-4b3f-b77f-2dfaadc30101:
     version: "116"
   09277055-30c0-4e67-a114-c096c0ee9904:
