Final release 262.7.0 (branch 262.x)

--- a/releases/index.yml
+++ b/releases/index.yml
@@ -303,6 +303,8 @@ builds:
     version: "241"
   8044cc21-21fd-49eb-903f-cc625b21c4bf:
     version: "257.3"
+  808ba446-5fad-415c-5f94-30dd2b0c449a:
+    version: 262.7.0
   80cebae99ee55ecfd1ba543612ba440400b66d6a:
     version: "64"
   81323ee570aac0a8974bb83ea2cb57b40f43b0d4:
