--- a/.final_builds/jobs/director/index.yml
+++ b/.final_builds/jobs/director/index.yml
@@ -335,6 +335,10 @@ builds:
     version: cd706b27d857d2c4e099e65d2980d7565c85e56a
     blobstore_id: cd2d9885-64cc-4e38-5d87-56d2a9624c94
     sha1: 7db3f5ba76c523d3f5f19cd0e13a34c750dbb7c0
+  ce070f89cb03a22a97d902e759b02d78dc573394:
+    version: ce070f89cb03a22a97d902e759b02d78dc573394
+    blobstore_id: 1aa035a7-1a34-457e-5585-0630eb3c4283
+    sha1: 26479849192b1a319b1d4915bf457118f9dbe787
   cf8f488099089caebca28c24b7a5caf8108fead5:
     version: "1"
     blobstore_id: rest/objects/4e4e78bca41e121004e4e7d517618f04f7f825dee51d
