Final release 261.6.0 (branch 261.x)

--- a/.final_builds/packages/director/index.yml
+++ b/.final_builds/packages/director/index.yml
@@ -555,6 +555,10 @@ builds:
     version: 67277e27f0123802e23b7a40c66a217934358e1e
     blobstore_id: b93c0e94-bcbe-4b94-8b70-413ca4ae4555
     sha1: d8c8e6e9c56033248a258af2248dcb14e163dd5e
+  68337fc09f08aa22c5552b0fed6479fd3b1dbd5c:
+    version: 68337fc09f08aa22c5552b0fed6479fd3b1dbd5c
+    blobstore_id: a0c0578f-f51b-4882-7194-89ad4df3c914
+    sha1: 31d9cbdb819b5c818afa51080d4d2265cac9727c
   68ec55117021bdfc8fec403850aacefa0cfc8e83:
     version: 68ec55117021bdfc8fec403850aacefa0cfc8e83
     blobstore_id: f1db1baa-2919-4caa-7913-b4f0fd18b7f1
