--- a/releases/index.yml
+++ b/releases/index.yml
@@ -81,6 +81,8 @@ builds:
     version: "262.4"
   27d3af15-dca6-4dd6-9008-83476d87fd4d:
     version: "257.1"
+  28bc354e-29fb-433d-40cc-0e23d6c7d0b8:
+    version: 261.6.0
   2902a03d-1f78-4c15-4ff4-7d11ebcad013:
     version: "262.1"
   2946c7ac-ee50-437d-a21a-9e969cfb63bd:
