Add hotswap builds to pipeline

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -10,7 +10,9 @@ groups:
       - integration-postgres-gocli-sha2
       - integration-mysql-gocli-sha1
       - integration-db-tls-postgres
+      - integration-db-tls-postgres-hotswap
       - integration-db-tls-mysql
+      - integration-db-tls-mysql-hotswap
       - load-tests-postgres
       - load-tests-mysql
       - legacy-load-tests-postgres
@@ -458,6 +460,58 @@ jobs:
         on_failure:
           <<: *slack-alert
 
+  - name: integration-db-tls-postgres-hotswap
+    public: true
+    serial: true
+    build_logs_to_retain: 250
+    plan:
+      - aggregate:
+        - get: bosh-src
+          trigger: true
+        - get: bosh-cli
+          trigger: true
+        - get: bosh-agent
+      - aggregate:
+        - task: test-group-1
+          privileged: true
+          file: bosh-src/ci/tasks/test-integration-gocli.yml
+          tags: ["bosh-integration-db-tls-postgres"]
+          params:
+            DB:           postgresql
+            DEFAULT_UPDATE_STRATEGY: duplicate-and-replace-vm
+            RUBY_VERSION: 2.4.2
+            NUM_GROUPS:   24
+            GROUP:        1,4,7,10,13,16,19,22
+            SHA2_MODE:    true
+            DB_TLS:       true
+        - task: test-group-2
+          privileged: true
+          file: bosh-src/ci/tasks/test-integration-gocli.yml
+          tags: ["bosh-integration-db-tls-postgres"]
+          params:
+            DB:           postgresql
+            DEFAULT_UPDATE_STRATEGY: duplicate-and-replace-vm
+            RUBY_VERSION: 2.4.2
+            NUM_GROUPS:   24
+            GROUP:        2,5,8,11,14,17,20,23
+            SHA2_MODE:    true
+            DB_TLS:       true
+        - task: test-group-3
+          privileged: true
+          file: bosh-src/ci/tasks/test-integration-gocli.yml
+          tags: ["bosh-integration-db-tls-postgres"]
+          params:
+            DB:           postgresql
+            DEFAULT_UPDATE_STRATEGY: duplicate-and-replace-vm
+            RUBY_VERSION: 2.4.2
+            NUM_GROUPS:   24
+            GROUP:        3,6,9,12,15,18,21,24
+            SHA2_MODE:    true
+            DB_TLS:       true
+
+        on_failure:
+          <<: *slack-alert
+
   - name: integration-db-tls-mysql
     public: true
     serial: true
@@ -531,6 +585,91 @@ jobs:
               path: bosh-src/ci/tasks/test-integration-gocli.sh
             params:
               DB:           mysql
+              RUBY_VERSION: 2.4.2
+              NUM_GROUPS:   24
+              GROUP:        3,6,9,12,15,18,21,24
+              SHA2_MODE:    true
+              DB_TLS:       true
+
+        on_failure:
+          <<: *slack-alert
+
+  - name: integration-db-tls-mysql-hotswap
+    public: true
+    serial: true
+    build_logs_to_retain: 250
+    plan:
+      - aggregate:
+        - get: bosh-src
+          trigger: true
+        - get: bosh-cli
+          trigger: true
+        - get: bosh-agent
+      - aggregate:
+        - task: test-group-1
+          privileged: true
+          tags: ["bosh-integration-db-tls-mysql"]
+          config:
+            platform: linux
+            image_resource:
+              type: docker-image
+              source:
+                repository: bosh/main-mysql-5.7
+            inputs:
+            - name: bosh-src
+            - name: bosh-cli
+            - name: bosh-agent
+            run:
+              path: bosh-src/ci/tasks/test-integration-gocli.sh
+            params:
+              DB:           mysql
+              DEFAULT_UPDATE_STRATEGY: duplicate-and-replace-vm
+              RUBY_VERSION: 2.4.2
+              NUM_GROUPS:   24
+              GROUP:        1,4,7,10,13,16,19,22
+              SHA2_MODE:    true
+              DB_TLS:       true
+        - task: test-group-2
+          privileged: true
+          tags: ["bosh-integration-db-tls-mysql"]
+          config:
+            platform: linux
+            image_resource:
+              type: docker-image
+              source:
+                repository: bosh/main-mysql-5.7
+            inputs:
+            - name: bosh-src
+            - name: bosh-cli
+            - name: bosh-agent
+            run:
+              path: bosh-src/ci/tasks/test-integration-gocli.sh
+            params:
+              DB:           mysql
+              DEFAULT_UPDATE_STRATEGY: duplicate-and-replace-vm
+              RUBY_VERSION: 2.4.2
+              NUM_GROUPS:   24
+              GROUP:        2,5,8,11,14,17,20,23
+              SHA2_MODE:    true
+              DB_TLS:       true
+        - task: test-group-3
+          privileged: true
+          tags: ["bosh-integration-db-tls-mysql"]
+          config:
+            platform: linux
+            image_resource:
+              type: docker-image
+              source:
+                repository: bosh/main-mysql-5.7
+            inputs:
+            - name: bosh-src
+            - name: bosh-cli
+            - name: bosh-agent
+            run:
+              path: bosh-src/ci/tasks/test-integration-gocli.sh
+            params:
+              DB:           mysql
+              DEFAULT_UPDATE_STRATEGY: duplicate-and-replace-vm
               RUBY_VERSION: 2.4.2
               NUM_GROUPS:   24
               GROUP:        3,6,9,12,15,18,21,24
