--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -73,7 +73,7 @@ shared:
             source /etc/profile.d/chruby.sh
             chruby $RUBY_VERSION
 
-            bundle install --local
+            bundle install --path=vendor/cache --jobs=4 --retry=3
             bundle exec rake spec:integration:install_dependencies
           popd
           rsync -a uninstalled-bosh-src/ bosh-src/
