--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -781,8 +781,7 @@ resources:
   - name: every-sunday
     type: time
     source:
-      start: 1:00 PM
-      stop: 9:00 PM
+      start: 11:00 AM
       days: [Sunday]
 
   - name: slack-alert
