Trigger builds at 9:00 AM on Sunday.
[#155716433](https://www.pivotaltracker.com/story/show/155716433)

Signed-off-by: Joshua Aresty <joshua.aresty@emc.com>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -775,8 +775,7 @@ resources:
   - name: every-sunday
     type: time
     source:
-      start: 1:00 PM
-      stop: 9:00 PM
+      start: 9:00 AM
       days: [Sunday]
 
   - name: slack-alert
