Add needed stop parameter to time resource
[#155716433](https://www.pivotaltracker.com/story/show/155716433)

Signed-off-by: Joshua Aresty <joshua.aresty@emc.com>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -782,6 +782,7 @@ resources:
     type: time
     source:
       start: 11:00 AM
+      stop: 12:00 PM
       days: [Sunday]
 
   - name: slack-alert
