Add needed stop parameter to time resource
[#155716433](https://www.pivotaltracker.com/story/show/155716433)

Signed-off-by: Tom Viehman <tviehman@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -776,6 +776,7 @@ resources:
     type: time
     source:
       start: 9:00 AM
+      stop: 10:00 AM
       days: [Sunday]
 
   - name: slack-alert
