Add needed stop parameter to time resource
[#155716433](https://www.pivotaltracker.com/story/show/155716433)

Signed-off-by: Joshua Aresty <joshua.aresty@emc.com>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -744,6 +744,7 @@ resources:
     type: time
     source:
       start: 7:00 AM
+      stop: 8:00 AM
       days: [Sunday]
 
   - name: slack-alert
