Remove fuzz tests from pipeline
[#155054821](https://www.pivotaltracker.com/story/show/155054821)

Signed-off-by: Tom Viehman <tviehman@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -14,7 +14,7 @@ groups:
       # - load-tests-mysql
       # - legacy-load-tests-postgres
       # - legacy-load-tests-mysql
-      - fuzz-tests
+      # - fuzz-tests
       - candidate-release
       - bats-centos
       - bats-ubuntu
@@ -425,29 +425,29 @@ jobs:
   #         icon_url: http://cl.ly/image/3e1h0H3H2s0P/concourse-logo.png
   #         text: {{slack_failure_message}}
   #
-  - name: fuzz-tests
-    public: true
-    serial: true
-    build_logs_to_retain: 2500
-    plan:
-    - { get: fuzz-interval-trigger, trigger: true }
-    - { get: bosh-src, trigger: true }
-    - { get: bosh-fuzz-tests }
-    - { get: bosh-cli }
-
-    - task: test
-      privileged: true
-      file: bosh-fuzz-tests/ci/tasks/test.yml
-      tags: ["bosh-integration"]
-      params:
-        BOSH_SRC_PATH: bosh-src/src
-        RUBY_VERSION: 2.3.1
-      on_failure:
-        put: slack-alert
-        params:
-          channel: {{slack_channel_name}}
-          icon_url: http://cl.ly/image/3e1h0H3H2s0P/concourse-logo.png
-          text: {{slack_failure_message}}
+  #   - name: fuzz-tests
+  #     public: true
+  #     serial: true
+  #     build_logs_to_retain: 2500
+  #     plan:
+  #     - { get: fuzz-interval-trigger, trigger: true }
+  #     - { get: bosh-src, trigger: true }
+  #     - { get: bosh-fuzz-tests }
+  #     - { get: bosh-cli }
+  #
+  #   - task: test
+  #     privileged: true
+  #     file: bosh-fuzz-tests/ci/tasks/test.yml
+  #     tags: ["bosh-integration"]
+  #     params:
+  #       BOSH_SRC_PATH: bosh-src/src
+  #       RUBY_VERSION: 2.3.1
+  #     on_failure:
+  #       put: slack-alert
+  #       params:
+  #         channel: {{slack_channel_name}}
+  #         icon_url: http://cl.ly/image/3e1h0H3H2s0P/concourse-logo.png
+  #         text: {{slack_failure_message}}
 
   - name: candidate-release
     plan:
@@ -461,7 +461,7 @@ jobs:
       - integration-2.3-postgres
       - integration-postgres-gocli-sha2
       - blobstore-client-integration
-      - fuzz-tests
+      # - fuzz-tests
       # - load-tests-postgres
       # - load-tests-mysql
       # - legacy-load-tests-postgres
@@ -588,23 +588,23 @@ resources:
       secret_access_key: {{candidate_release_secret_access_key}}
       versioned_file: "bosh-dev-release.tgz"
 
-  - name: bosh-fuzz-tests
-    type: git
-    source:
-      uri: https://github.com/cloudfoundry-incubator/bosh-fuzz-tests.git
-      branch: 261.x
-
+  # - name: bosh-fuzz-tests
+  #   type: git
+  #   source:
+  #     uri: https://github.com/cloudfoundry-incubator/bosh-fuzz-tests.git
+  #     branch: 261.x
+  #
   # - name: bosh-load-tests-workspace
   #   type: git
   #   source:
   #     uri: https://github.com/cloudfoundry-incubator/bosh-load-tests-workspace
   #     branch: 261.x
 
-  - name: fuzz-interval-trigger
-    type: time
-    source:
-      interval: 15m
-
+  # - name: fuzz-interval-trigger
+  #   type: time
+  #   source:
+  #     interval: 15m
+  #
   - name: slack-alert
     type: slack-notification
     source:
